from home layout impr

--- a/ImDbApp/app/src/main/AndroidManifest.xml
+++ b/ImDbApp/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/my_app_icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".DetailCardActivity"></activity>
         <activity android:name=".MySplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,8 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity">
-        </activity>
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
